[gd_scene load_steps=8 format=3 uid="uid://bsbubgvxjfrty"]

[ext_resource type="Script" path="res://fps_bar.gd" id="1_cq30b"]
[ext_resource type="Script" path="res://fps_bar_label.gd" id="1_p4yfo"]
[ext_resource type="FontFile" uid="uid://dyfftw43h1bkw" path="res://Font/ENSADLED-Regular.otf" id="2_jhojx"]

[sub_resource type="FontVariation" id="FontVariation_mepep"]
resource_local_to_scene = true
base_font = ExtResource("2_jhojx")
spacing_glyph = -3

[sub_resource type="LabelSettings" id="LabelSettings_qvnac"]
resource_local_to_scene = true
font = SubResource("FontVariation_mepep")

[sub_resource type="FontVariation" id="FontVariation_kmxxm"]
resource_local_to_scene = true
base_font = ExtResource("2_jhojx")
spacing_glyph = -3

[sub_resource type="LabelSettings" id="LabelSettings_c3xcp"]
resource_local_to_scene = true
font = SubResource("FontVariation_kmxxm")

[node name="FPS_bar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p4yfo")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="FPS" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "IPS"
label_settings = SubResource("LabelSettings_qvnac")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FPS_bar_only" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 7.0
script = ExtResource("1_cq30b")

[node name="Line" type="ColorRect" parent="HBoxContainer/FPS_bar_only"]
layout_mode = 2
offset_left = 4.0
offset_right = 4.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="label_bg" type="ColorRect" parent="HBoxContainer/FPS_bar_only"]
layout_mode = 2
offset_left = 8.0
offset_right = 8.0
offset_bottom = 40.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="HBoxContainer/FPS_bar_only/label_bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -13.0
offset_right = 16.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_c3xcp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="HBoxContainer/FPS_bar_only"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="resized" from="HBoxContainer/FPS_bar_only" to="HBoxContainer/FPS_bar_only" method="_on_resized"]
[connection signal="value_change" from="HBoxContainer/FPS_bar_only" to="." method="_on_fps_bar_only_value_change"]
[connection signal="mouse_entered" from="HBoxContainer/FPS_bar_only/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/FPS_bar_only/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/FPS_bar_only/Button" to="." method="_on_button_pressed"]
